--- a/angular.json
+++ b/angular.json
@@ -102,10 +102,14 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d7ce2393-9947-4d23-8d1b-8bb7d98fc280"
   }
 }
